[package]
name = "dyn_col_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
indexmap = "1.9.3"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "benches"
harness = false