[package]
name = "table_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
indexmap = "2.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"


[[bench]]
name = "benches"
harness = false